--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 		const passwordLengthEl = document.querySelector('#password-length');
 		passwordLengthEl.addEventListener('input', function () {
 			passwordLength = passwordLengthEl.value;
+			document.querySelector('#password-length-text').innerHTML = passwordLength;
 			generatePassword()
 		});
 
