--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</div>
 				</div>
 				<div class="security-indicator">
-					<div id="security-indicator-bar" class="bar" style="width: 90%;"></div>
+					<div id="security-indicator-bar" class="bar safe"></div>
 				</div>
 			</section>
 
@@ -83,6 +83,8 @@
 		const upperCaseCheckEl = document.querySelector('#uppercase-check');
 		const numberCheckEl = document.querySelector('#number-check');
 		const symbolCheckEl = document.querySelector('#symbol-check');
+		const securityIndicatorBarEl = document.querySelector('#security-indicator-bar');
+
 
 		function generatePassword() {
 			let chars = 'abcdefghigklmnopqrstuvwxyz';
@@ -108,6 +110,17 @@
 			}
 
 			inputEl.value = password;
+			calculateQuality();
+		}
+
+		function calculateQuality(){
+		const porcent =  Math.round(
+			(passwordLength/64) * 25 +
+			 (upperCaseCheckEl.checked ? 15 : 0) +
+			 (numberCheckEl.checked ? 25 : 0) +
+			  (symbolCheckEl.checked ? 35 : 0));
+		
+				securityIndicatorBarEl.style.width = porcent + '%';
 		}
 
 		function copy() {
