--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 
 			inputEl.value = password;
 			calculateQuality();
+			calculateFontSize();
 		}
 
 		function calculateQuality(){
@@ -141,6 +142,26 @@
 				: securityIndicatorBarEl.classList.remove('completed');
 		}
 
+		function calculateFontSize(){
+			if(passwordLength > 45){
+				inputEl.classList.remove('font-sm')
+				inputEl.classList.remove('font-xs')
+				inputEl.classList.add('font-xxs')
+			}else if(passwordLength > 32){
+				inputEl.classList.remove('font-sm')
+				inputEl.classList.add('font-xs')
+				inputEl.classList.remove('font-xxs')
+			}else if(passwordLength> 22){
+				inputEl.classList.add('font-sm')
+				inputEl.classList.remove('font-xs')
+				inputEl.classList.remove('font-xxs')
+			}else{
+				inputEl.classList.remove('font-sm')
+				inputEl.classList.remove('font-xs')
+				inputEl.classList.remove('font-xxs')
+			}
+		}
+
 		function copy() {
 			navigator.clipboard.writeText(inputEl.value);
 		}
@@ -158,6 +179,8 @@
 		
 		document.querySelector('#copy-1').addEventListener('click', copy);
 		document.querySelector('#copy-2').addEventListener('click', copy);
+		document.querySelector('#renew').addEventListener('click', generatePassword);
+		
 		generatePassword()
 	</script>
 	</body>
